feat: Update app title and theme colors
Refactors `index.html` to update the application title to "集团版智能客服监控系统" and introduces new enterprise-themed Tailwind CSS colors for primary, dark, and gray. Also updates the React DOM rendering method in `index.tsx` to use `createRoot` from `react-dom/client` and `package.json` for dependency versions.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>面板连接异常监测系统</title>
+    <title>集团版智能客服监控系统</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#0052d9',
+                        enterprise: {
+                            blue: '#0052d9',
+                            dark: '#1d2129',
+                            gray: '#f2f3f5'
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <style>
+        /* 核心动画：雷达脉冲 */
         @keyframes radar-ping {
             0% { transform: scale(1); opacity: 0.8; }
             100% { transform: scale(3); opacity: 0; }
@@ -15,7 +32,7 @@
             animation: radar-ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
         }
 
-        /* 动画 1: 点亮图标 */
+        /* 动画 1: 模拟光标操作 */
         @keyframes cursor-move {
             0%, 10% { transform: translate(40px, 40px); }
             40%, 60% { transform: translate(12px, 12px); }
@@ -30,7 +47,7 @@
             60%, 100% { width: 80px; opacity: 1; }
         }
 
-        /* 动画 2: 滑动查找 */
+        /* 动画 2: 列表滚动查找 */
         @keyframes list-scroll {
             0%, 20% { transform: translateY(0); }
             80%, 100% { transform: translateY(-60px); }
@@ -44,20 +61,21 @@
         .no-scrollbar::-webkit-scrollbar { display: none; }
         .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1?deps=react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client?deps=react@18.3.1",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?deps=react@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-enterprise-gray text-enterprise-dark antialiased">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
 </body>
